--- a/requirements.txt
+++ b/requirements.txt
@@ -1,53 +1,11 @@
-aiohttp==3.4.4
-altgraph==0.16.1
-antiorm==1.2.1
-asn1crypto==0.24.0
-async-timeout==3.0.0
-attrs==18.2.0
-beautifulsoup4==4.8.0
-bs4==0.0.1
-certifi==2018.8.24
-cffi==1.11.5
-chardet==3.0.4
-colorama==0.3.9
-cryptography==2.3.1
-cycler==0.10.0
-db==0.1.1
-django==2.1.2
-django-tables2==2.0.3
-future==0.17.1
-html5lib==1.0.1
-idna==2.7
-kiwisolver==1.0.1
-lxml==4.4.0
-matplotlib==3.0.0
-multidict==4.4.2
-numpy==1.15.2
-pbr==4.3.0
-pefile==2019.4.18
-pip==19.3
-pycparser==2.19
-pyinstall==0.1.4
-PyInstaller==3.5
-PyMySQL==0.9.2
-pyparsing==2.2.2
-PyQt5==5.13.1
-PyQt5-sip==12.7.0
-python-dateutil==2.7.3
-pytz==2018.5
-pywin32-ctypes==0.2.0
-qrcode==6.0
-requests==2.19.1
-setuptools==33.1.1
-six==1.11.0
-soupsieve==1.9.2
-stevedore==1.29.0
-urllib3==1.23
-utils==0.9.0
-virtualenv==16.0.0
-virtualenv-clone==0.3.0
-virtualenvwrapper==4.8.2
-virtualenvwrapper-win==1.2.5
-web.py==0.40.dev0
-webencodings==0.5.1
-yarl==1.2.6
+Click==7.0
+Flask==1.1.1
+Flask-Login==0.4.1
+Flask-SQLAlchemy==2.4.1
+itsdangerous==1.1.0
+Jinja2==2.10.3
+MarkupSafe==1.1.1
+pip==19.3.1
+setuptools==39.0.1
+SQLAlchemy==1.3.10
+Werkzeug==0.16.0
